syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    StockThreshold records contain information about whether and how long a stock has been on the REG SRO threshold list.
*/    
message StockThreshold {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    YesNo threshold_flag = 100;
    int32 threshold_days = 103;
    google.protobuf.Timestamp threshold_date = 106;
}


